Revert "Update Instagram links."
This reverts commit 0e21bd457a0293d6a42625b9d6435c7d6e977043.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,7 +53,7 @@ Coming soon to 60 Yongkang Lu.
         <h2>Contact</h2>
 
         <p>
-        Send us an <a href="mailto:info@si6do1.com?Subject=Hello,%20Sido!">email</a>, or follow us on <a href="https://twitter.com/si6do1">Twitter</a> or <a href="https://instagram.com/_u/si6do1">Instagram</a>.
+        Send us an <a href="mailto:info@si6do1.com?Subject=Hello,%20Sido!">email</a>, or follow us on <a href="https://twitter.com/si6do1">Twitter</a> or <a href="https://instagram.com/si6do1">Instagram</a>.
         </p>
 {% endcomment %}
 
@@ -67,7 +67,7 @@ Coming soon to 60 Yongkang Lu.
     <div class="large-2 large-offset-1 columns social">
       <ul>
         <li><a href="https://twitter.com/{{ site.twitter }}"><i class="fa fa-twitter"></i></a></li>
-        <li><a href="https://instagram.com/_u/{{ site.instagram }}"><i class="fa fa-instagram"></i></a></li>
+        <li><a href="https://instagram.com/{{ site.instagram }}"><i class="fa fa-instagram"></i></a></li>
       </ul>
     </div>
     
