--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,9 @@ Sido is a store.
         </p>  
 
         <p align="center">
+We sell simple, beautiful things. Useful things. Affordable things. Things that can be combined in endless ways, to tell a story of your own design. Like words in a language. Like atoms in a universe.
+
+        <p align="center">
 Coming soon to 60 Yongkang Lu.
         </p>  
 
