--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@ Sido is a store.
         </p>  
 
         <p align="center">
-We sell simple, beautiful things. Useful things. Affordable things. Things that can be combined in endless ways, to tell a story of your own design. Like words in a language. Like atoms in a universe.
+We sell simple, beautiful things. Useful things. Ordinary things. Things that can be combined in endless ways, to tell a story of your own design. Like words in a language. Like atoms in a universe.
 
         <p align="center">
 Coming soon to 60 Yongkang Lu.
@@ -40,7 +40,7 @@ Coming soon to 60 Yongkang Lu.
 
 {% comment %}
       <main>
-        <h2>Latest Work</h2>
+        <h2>News</h2>
         {% for post in site.posts %}
           <div class="project-post">
             <h3><a href="{{ post.git }}">{{ post.title }}</a></h3>
