Add photograph of storefront.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,14 @@
       <div class="content-section">
 
         <p align="center">
+          <img src="http://bweslake.s3.amazonaws.com/si6do1.com/images/sido-front.jpg">
+        </p>  
+
+        <p align="center">
+          &nbsp;
+        </p>  
+
+        <p align="center">
 Sido is a store.
         </p>  
 
@@ -29,11 +37,11 @@ Sido is a store.
 We sell simple, beautiful things. Useful things. Ordinary things. Things that can be combined in endless ways, to tell a story of your own design. Like words in a language. Like atoms in a universe.
 
         <p align="center">
-Coming soon to 60 Yongkang Lu.
+Visit us at 60 Yongkang Lu, Shanghai.
         </p>  
 
         <p align="center">
-<a href="mailto:info@si6do1.com?Subject=What%20is%20Sido?">info@si6do1.com</a>
+<a href="mailto:info@si6do1.com?Subject=Hello%20Sido">info@si6do1.com</a>
         </p>
 
       </div>
@@ -61,7 +69,7 @@ Coming soon to 60 Yongkang Lu.
 {% endcomment %}
 
         <p class="copyright">
-          &copy; <time datetime="{{ site.time | date_to_xmlschema }}">{{ site.time | date: '%Y' }}</time>.
+          &copy; <time datetime="{{ site.time | date_to_xmlschema }}">{{ site.time | date: '%Y' }}</time>
         </p>
       </footer>
 
